third_party/rust/chromium_crates_io/vendor/zerocopy-v0_8/tests/ui-msrv/try_transmute-src-not-intobytes.stderr
error[E0277]: the trait bound `NotZerocopy<AU16>: zerocopy::IntoBytes` is not satisfied
  --> tests/ui-msrv/try_transmute-src-not-intobytes.rs:18:47
   |
18 |     let src_not_into_bytes: Result<AU16, _> = try_transmute!(NotZerocopy(AU16(0)));
   |                                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `zerocopy::IntoBytes` is not implemented for `NotZerocopy<AU16>`
   |
note: required by a bound in `try_transmute`
  --> src/util/macro_util.rs
   |
   |     Src: IntoBytes,
   |          ^^^^^^^^^ required by this bound in `try_transmute`
   = note: this error originates in the macro `try_transmute` (in Nightly builds, run with -Z macro-backtrace for more info)
